--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,13 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends:
+Imports:
     data.table,
     zoo,
     gamlss,
     gamlss.dist,
-    SPEI
+    SPEI,
+    ggplot2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
