--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@
 
 S3method(plot,drought)
 export(computenspi)
+export(droughtclass)
 export(dummyrainfall)
+export(measurebias)
+export(oossplit)
 import(SPEI)
 import(data.table)
 import(gamlss)
@@ -11,6 +14,7 @@ import(ggplot2)
 import(zoo)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
+importFrom(data.table,set)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,theme_light)
