--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,13 @@ RoxygenNote: 7.1.1
 Imports:
     data.table,
     zoo,
-    gamlss,
     gamlss.dist,
     SPEI,
-    ggplot2
+    ggplot2,
+    MLmetrics
+Depends:
+    forecast,
+    gamlss
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
