adding bias induced model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,drought)
 export(bcautoarima)
 export(bcautoarimapred)
 export(bcmodwtautoarima)
+export(biautoarima)
 export(computenspi)
 export(droughtclass)
 export(dummyrainfall)
