--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,18 @@ export(compdist)
 export(computenspi)
 export(droughtclass)
 export(dummyrainfall)
+export(measurebias)
+export(oossplit)
 import(SPEI)
 import(data.table)
+import(forecast, except = CV)
 import(gamlss, except = CV)
+import(gamlss.dist)
 import(ggplot2)
 import(zoo)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
+importFrom(data.table,set)
 importFrom(gamlss.dist,GA)
 importFrom(gamlss.dist,NO)
 importFrom(gamlss.dist,WEI)
