--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,10 +30,12 @@ Config/testthat/edition: 3
 VignetteBuilder: knitr
 Collate: 
     'compdist.R'
+    'computeclass.R'
     'dummyrainfall.R'
     'computenspi.R'
     'droughtclass.R'
     'globals.R'
     'measurebias.R'
     'oossplit.R'
-    'plot.R'
+    'plot.drought.R'
+    'plot.droughtclass.R'
