--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,11 +25,11 @@ Imports:
 Suggests: 
     rmarkdown,
     knitr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    covr
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Collate: 
-    'compdist.R'
     'computeclass.R'
     'dummyrainfall.R'
     'computenspi.R'
